Feat: Criação de sistema de ordenar por (name/number)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
+        <div>
+            <label for="sortSelector">Selecione por:</label>
+            <select id="sortSelector">
+                <option value="name" selected>Nome:</option>
+                <option value="number">Numero:</option>
+                <!-- Add more options if needed -->
+            </select>
+        </div>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
